turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:14: error: type mismatch;
 found   : Unit
 required: Array[Array[Array[Int]]]
var rule:Array[Array[Array[Int]]] = init() // Change this
                                        ^Turmite:46: error: not found: value O
	rule=Array(Array(Array(1, RIGHT, 0), Array(O, NOTURN, O), Array(1, RIGHT, 1), Array(0, NOTURN, 1)))
                                                   ^